implement login + register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 
 <router-outlet />
 
-<div>Jamal Test push</div>
 
-<div>Ozan Test push</div>
-
-<div>test test</div>
-
+<app-register></app-register>
