--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -1,1 +1,53 @@
-<p>login works!</p>
+<div class="flex items-center justify-center min-h-screen p-4 bg-white">
+    <div class="w-full max-w-sm">
+      <h1 class="mb-1 text-[32px] leading-[38.4px] font-bold d text-center text-purple1">Anmeldung</h1>
+      <p class="mb-6 text-sm text-center text-textgray">
+        Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die du bei der Arbeit verwendest.
+      </p>
+  
+      <form class="space-y-4">
+        <div class="relative">
+            <img src="assets/imgs/icons/mail.svg" alt="Mail Icon"
+              class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2" />
+            <input type="email" placeholder="beispielname@email.com"
+              class="w-full py-2 pl-12 pr-4 transition duration-200 bg-white border border-white rounded-full input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2" />
+          </div>
+          
+          <div class="relative">
+            <img src="assets/imgs/icons/lock.svg" alt="Lock Icon"
+              class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2" />
+            <input type="password" placeholder="Passwort"
+              class="w-full py-2 pl-12 pr-4 transition duration-200 bg-white border border-white rounded-full input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2" />
+          </div>
+          
+          
+          
+        <div class="text-right">
+          <a href="#" class="text-sm text-purple2 hover:underline">Passwort vergessen?</a>
+        </div>
+  
+        <div class="flex items-center justify-center space-x-2">
+          <div class="flex-grow h-px bg-lightpurple"></div>
+          <span class="text-sm text-black">ODER</span>
+          <div class="flex-grow h-px bg-lightpurple"></div>
+        </div>
+  
+        <button type="button"
+          class="flex items-center justify-center w-full px-4 py-2 space-x-2 border rounded-full border-lightpurple hover:bg-primary">
+          <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Icon" class="w-5 h-5" />
+          <span>Anmelden mit Google</span>
+        </button>
+  
+        <div class="flex space-x-2">
+          <button type="submit" class="flex-1 py-2 text-white rounded-full bg-purple1 hover:bg-purple3">
+            Anmelden
+          </button>
+          <button type="button"
+            class="flex-1 py-2 border rounded-full border-purple1 text-purple1 hover:bg-primary">
+            Gäste-Login
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+  
