--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -20,11 +20,13 @@
                 Noah Braun
             </p>
 
-            <!-- <div class="p-[1%] size-6 bg-primary rounded-[50%] cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]">
+            <div
+                class="p-[1%] size-9 bg-primary rounded-[50%] cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]  xs:hidden ">
                 <img class="size-full" src="/assets/icons/edit.svg" alt="">
-            </div> -->
-            
-            <span class="text-lg cursor-pointer text-purple3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
+            </div>
+
+            <span
+                class="text-lg cursor-pointer text-purple3 hover:scale-[1.2] duration-200 active:scale-[0.9] hidden xs:block">
                 Bearbeiten
             </span>
         </div>
