--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -1,8 +1,9 @@
-<section class="max-w-lg border border-black h-60 rounded-[30px] bg-white py-7 px-4 flex flex-col gap-5">
+<section class="max-w-lg border border-black h-60 rounded-[30px] bg-white py-7 px-4 flex flex-col gap-5 shadow-lg">
 
     <div class="flex justify-between">
-        <span>Leute hinzufügen</span>
-        <img class="cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="">
+        <span class="text-2xl font-bold">Leute hinzufügen</span>
+        <img class="cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg"
+            alt="">
     </div>
 
     <div class="border border-black h-14 rounded-[30px] px-5 py-[15px]">
@@ -13,6 +14,5 @@
         class="self-end h-12 text-white bg-slate-500 w-36 rounded-3xl hover:scale-[1.1] duration-200 active:scale-[0.9]">
         hinzufügen
     </button>
-
 
 </section>
