channel page split the components

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <p>landing-page works!</p>
 
-
-<div class="bg-primary">
-
-</div>
+<section class="flex items-center justify-center h-screen size-full">
+    <button routerLink="channel" class="p-4 border border-black">
+        Gust login
+    </button>
+</section>
