--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
 <router-outlet />
 
 
-<section class="flex items-center justify-center h-screen size-full">
+<!-- <section class="flex items-center justify-center h-screen size-full">
     <button routerLink="channel" class="p-4 border border-black">
         Gust login
     </button>
-</section>
+</section> -->
