Work on chat components

--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -1,4 +1,4 @@
-<section class="flex items-center justify-between py-[13px] px-4 header">
+<section class="flex items-center justify-between  bg-white py-[13px] px-4 header">
     @if (channelService.chatType === 'channel') {
         <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary">
             <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag"><span>{{ channelService.channelName }}</span><img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="">
