--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,1 +1,12 @@
-<p>chat-input works!</p>
+<section class="h-[145px] p-5 mx-4 flex flex-col bg-white rounded-[20px] border-lightpurple border-[1px]">
+    <input type="text" placeholder="Antworten...">
+    <div>
+        <div>
+            <button><img src="" alt=""></button>
+            <button><img src="" alt=""></button>
+        </div>
+        <button>
+            <img src="" alt="">
+        </button>
+    </div>
+</section>
