--- a/src/app/components/channel-page/channels/channels.component.html
+++ b/src/app/components/channel-page/channels/channels.component.html
@@ -16,6 +16,9 @@
     <ul id="dropList" class="w-full pl-[10%] flex flex-col gap-3">
         <li># Entwicklerteam</li>
         <li># Channel hinzufügen</li>
+
+
+        <li  class="flex gap-3 "><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
     </ul>
 
 </section>
