--- a/src/app/components/channel-page/channels/channels.component.scss
+++ b/src/app/components/channel-page/channels/channels.component.scss
@@ -1,3 +1,3 @@
-// .btn-effekt{
-//     @apply hover:scale-[1.1] duration-200 cursor-pointer
-// }
+.btn-effekt{
+    @apply hover:scale-[1.1] duration-200 cursor-pointer
+}
