Work on chat components

--- a/src/app/components/chat-page/chat-page.component.html
+++ b/src/app/components/chat-page/chat-page.component.html
@@ -1,5 +1,5 @@
-<section>
-    <app-header></app-header>
+<section class="height">
+    <app-header class="header"></app-header>
     <app-chat-messages></app-chat-messages>
 </section>
 
