--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -1,12 +1,12 @@
-<section class="h-[145px] p-5 mx-4 flex flex-col bg-white rounded-[20px] border-lightpurple border-[1px]">
-    <input type="text" placeholder="Antworten...">
-    <div>
-        <div>
-            <button><img src="" alt=""></button>
-            <button><img src="" alt=""></button>
+<section class="h-[145px] p-5 mx-4 flex flex-col justify-between bg-white rounded-[20px] border-lightpurple border-[1px]">
+    <input class="focus-visible:outline-none" type="text" placeholder="Antworten...">
+    <div class="flex items-center justify-between h-10">
+        <div class="flex gap-[25px]">
+            <button><img class="size-5" src="assets/icons/emoji.svg" alt="Emoji"></button>
+            <button><img class="size-5" src="assets/icons/at.svg" alt="@ User"></button>
         </div>
         <button>
-            <img src="" alt="">
+            <img class="size-5" src="assets/icons/send_message.svg" alt="Send message">
         </button>
     </div>
 </section>
