--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center min-h-screen px-4 space-y-6 bg-primary">
     <img src="assets/imgs/icons/logo.svg" alt="Logo" class="h-16" />
 
-<app-resetpw-confirm></app-resetpw-confirm>
+    <app-login></app-login>
   </div>
   
