--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-
-
 <router-outlet />
 
-
-<section class="flex items-center justify-center h-screen size-full">
-    <button routerLink="channel" class="p-4 border border-black">
-        Gust login
-    </button>
-</section>
+<!-- <section class="flex items-center justify-center h-screen size-full">
+  <button routerLink="channel" class="p-4 border border-black">
+    Gust login
+  </button>
+</section> -->
+<!-- <app-channel-page></app-channel-page> -->
+<app-header></app-header>
