--- a/src/app/components/landing-page/resetpw-request/resetpw-request.component.html
+++ b/src/app/components/landing-page/resetpw-request/resetpw-request.component.html
@@ -2,10 +2,22 @@
     <div class="w-full max-w-sm p-6 space-y-6 bg-white rounded-3xl">
         
       <div class="flex items-center space-x-2">
-        <svg class="w-5 h-5 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
-        </svg>
+        <svg 
+        class="w-5 h-5 cursor-pointer" 
+        xmlns="http://www.w3.org/2000/svg" 
+        fill="none"
+        viewBox="0 0 24 24" 
+        stroke-width="2" 
+        stroke="currentColor"
+        (click)="goToLogin()"
+      >
+        <path 
+          stroke-linecap="round" 
+          stroke-linejoin="round" 
+          d="M15.75 19.5L8.25 12l7.5-7.5" 
+        />
+      </svg>
+      
         <h1 class="text-[32px] leading-[38.4px] text-purple1">
           Passwort zurücksetzen
         </h1>
