✨ UI: Replaced SVG with image and updated heading layout

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -23,7 +23,7 @@
         </div>
   
         <div class="text-right">
-          <span (click)="change()" class="text-sm text-purple2 hover:underline">Passwort vergessen?</span>
+          <span (click)="change()" class="text-sm cursor-pointer text-purple2 hover:underline">Passwort vergessen?</span>
         </div>
   
         <div class="flex items-center justify-center space-x-2">
