landing-page arrow

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -22,7 +22,7 @@
             class="w-full py-2 pl-12 pr-4 transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2 placeholder-textgray" />
         </div>
   
-        <div class="text-right">
+        <div class="text-center">
           <span (click)="change()" class="text-sm cursor-pointer text-purple2 hover:underline">Passwort vergessen?</span>
         </div>
   
