--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -2,10 +2,13 @@
     <div class="w-full max-w-sm space-y-6">
       
       <div class="flex items-center space-x-2">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-          stroke-width="2" stroke="currentColor" class="w-6 h-6 text-black" (click)="goToLogin()">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
-        </svg>
+        <img 
+        src="assets/icons/Property 1=Default (1).svg" 
+        alt="Zurück" 
+        class="w-6 h-6 cursor-pointer" 
+        (click)="goToLogin()" 
+      />
+      
         <h1 class="text-[32px] leading-[38.4px]   text-purple1">Konto erstellen</h1>
       </div>
   
