--- a/src/app/components/channel-page/channel-page.component.html
+++ b/src/app/components/channel-page/channel-page.component.html
@@ -1,17 +1,8 @@
+<app-header></app-header>
 
+<section class="flex flex-col min-h-screen p-2 h-fit">
+  <app-search></app-search>
 
+  <app-threads></app-threads>
 
-
-
-
-<section class="flex flex-col h-screen p-2">
-  <app-header></app-header>
-  <div class="h-full border border-black pt-28">
-    <app-search></app-search>
-    <div class="flex flex-col h-full mx-6 my-6 border border-yellow-400">
-      <app-channels></app-channels>
-      <app-direct-messages></app-direct-messages>
-    </div>
-  </div>
 </section>
-
