--- a/src/app/components/channel-page/channels/channels.component.html
+++ b/src/app/components/channel-page/channels/channels.component.html
@@ -1,24 +1,22 @@
 <section class="border border-red-600 h-fit">
 
-    <div class="flex items-center justify-between w-full h-12">
-
-        <button (click)="toggleDropDown()" class="flex items-center gap-4">
-            <img class="size-8" id="droparrow" src="/assets/icons/arrow_drop_down.svg" alt="">
+    <div class="flex items-center justify-between w-full h-12 px-2">
+        <button (click)="turnCannelArrow()" class="flex items-center gap-4">
+            <img class="size-8" id="channel-arrow" src="/assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
                 <img class="size-6" src="/assets/icons/workspaces.svg" alt="">
                 Channels
             </div>
         </button>
-
         <img class="size-8" src="/assets/icons/add.svg" alt="">
     </div>
 
-    <ul id="dropList" class="w-full pl-[10%] flex flex-col gap-3">
-        <li class="cursor-pointer"># Entwicklerteam</li>
-        <li class="cursor-pointer"># Channel hinzufügen</li>
+    <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
 
-
-        <li class="flex gap-3 cursor-pointer hover:text-purple3"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
+        @for (channel of channels; track $index) {
+            <li class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3"> <span class="font-bold">#</span> {{channel.name}}</li>
+        }
+        <li class="flex gap-3 cursor-pointer hover:text-purple3 pl-7"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
     </ul>
 
 </section>
