--- a/src/app/components/channel-page/direct-messages/direct-messages.component.html
+++ b/src/app/components/channel-page/direct-messages/direct-messages.component.html
@@ -1,17 +1,7 @@
 <section class="h-[489px] border border-blue-500">
 
-    <!-- <div class="flex justify-between w-full">
-        <button class="flex ">
-            <img src="/assets/icons/arrow_drop_down.svg" alt="">
-            <img src="/assets/icons/account_circle.svg" alt="">
-            Direktnachrichten
-        </button>
-        <img src="/assets/icons/add.svg" alt="">
-    </div> -->
 
-
-
-    <div class="flex items-center justify-between w-full h-12">
+    <div class="flex items-center justify-between w-full h-12 px-2">
         <button (click)="directMessagesToggle()" class="flex items-center gap-4">
             <img class="size-8" id="driectArrow" src="/assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
