--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,14 +3,29 @@
 @tailwind utilities;
 
 
+
 @font-face {
     font-family: 'Nunito';
-    src: url('/assets/fonts/Nunito/Nunito-VariableFont_wght.ttf') format('truetype');
-    font-weight: normal;
+    src: url('/assets/fonts/Nunito/static/Nunito-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url('/assets/fonts/Nunito/static/Nunito-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Nunito';
+    src: url('/assets/fonts/Nunito/static/Nunito-Bold.ttf') format('truetype');
+    font-weight: 700;
     font-style: normal;
 }
 
 
-*{
+* {
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
 }
