--- a/src/app/components/channel-page/channel-page.component.html
+++ b/src/app/components/channel-page/channel-page.component.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <section class="flex flex-col h-screen p-2">
   <app-header></app-header>
   <div class="h-full border border-black pt-28">
@@ -13,5 +7,14 @@
       <app-direct-messages></app-direct-messages>
     </div>
   </div>
-</section>
 
+  <div
+    class="flex justify-center items-center w-[60px] h-[60px] rounded-full bg-[rgba(68,77,242,1)] absolute top-[815px] left-[85%] -translate-x-1/2 cursor-pointer"
+  >
+    <img
+      src="assets/imgs/icons/add-user-btn.svg"
+      alt=""
+      class="w-[40px] h-[40px]"
+    />
+  </div>
+</section>
