--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,5 +1,5 @@
 <section
-  class="flex flex-col b min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl"
+  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
 >
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
@@ -26,11 +26,17 @@
         <img class="size-full" src="/assets/icons/edit.svg" alt="" />
       </div>
 
-      <span
+      <!--   <span
         class="text-lg cursor-pointer text-purple3 hover:scale-[1.2] duration-200 active:scale-[0.9] hidden xs:block"
       >
         Bearbeiten
-      </span>
+      </span> -->
+      <img
+        [routerLink]="['/edit-profil']"
+        class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out duration-[100ms]"
+        src="/assets/icons/edit2.svg"
+        alt=""
+      />
     </div>
 
     <div class="flex items-center gap-4">
