--- a/src/app/components/channel-page/channel-page.component.html
+++ b/src/app/components/channel-page/channel-page.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
-<section class="flex flex-col min-h-screen p-2 h-fit">
+<section class="flex flex-col h-[100vh - 80px]  p-5 border-2 border-pink-400 ">
+
   <app-search></app-search>
 
   <app-threads></app-threads>
