--- a/src/app/components/channel-page/threads/channels/channels.component.html
+++ b/src/app/components/channel-page/threads/channels/channels.component.html
@@ -1,4 +1,4 @@
-<section class="border border-red-600 h-fit">
+<section class="py-4 border border-red-600 h-fit">
 
     <div class="flex items-center justify-between w-full h-12 px-2">
         <button (click)="turnCannelArrow()" class="flex items-center gap-4">
@@ -13,7 +13,7 @@
 
     <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
 
-        @for (channel of channels; track $index) {
+        @for (channel of channelService.channels; track $index) {
             <li class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3"> <span class="font-bold">#</span> {{channel.name}}</li>
         }
         <li class="flex gap-3 cursor-pointer hover:text-purple3 pl-7"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
