--- a/src/app/components/shared/user/user.component.html
+++ b/src/app/components/shared/user/user.component.html
@@ -1,5 +1,9 @@
 <section
-    class="flex items-center justify-center gap-4 px-5 py-1  w-fit rounded-[30px] hover:bg-primary cursor-pointer shadow-lg bg-white hover:scale-[1.1] duration-200 active:scale-[0.9] active:bg-purple2">
-    <img class="size-14 rounded-[50%]" src="/assets/imgs/avatar4.svg" alt="">
-    <span>Frederik Beck</span>
+    class="flex items-center justify-center gap-4 px-5 py-1  w-fit rounded-[30px] hover:bg-primary cursor-pointer shadow-lg bg-white hover:scale-[1.03] duration-200 active:scale-[0.9] active:bg-purple2">
+    <div class="relative">
+        <img class="size-14 rounded-[50%]" src="{{userInfo.avatar}}" alt="">
+        <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2" [ngClass]="{'bg-online' :userInfo.online, 'bg-offline' : !userInfo.online}"></span>
+    </div> 
+    
+    <span>{{userInfo.name}}</span>
 </section>
