--- a/src/app/components/channel-page/channel-page.component.html
+++ b/src/app/components/channel-page/channel-page.component.html
@@ -3,9 +3,9 @@
 <section class="flex flex-col h-[100vh - 80px]  p-5 border-2 border-pink-400 ">
 
   <app-search></app-search>
-
   <app-threads></app-threads>
+
+  <app-add-channel [ngClass]="{'hidden': channelNavService.addChannelPopUp()}"  class="absolute top-[20%]"></app-add-channel>
 
 </section>
 
-<app-add-channel></app-add-channel>
