--- a/src/app/components/channel-page/threads/channels/channels.component.html
+++ b/src/app/components/channel-page/threads/channels/channels.component.html
@@ -8,7 +8,7 @@
                 Channels
             </div>
         </button>
-        <img class="size-8" src="/assets/icons/add.svg" alt="">
+        <img (click)="channelNavService.addCannelPopup()" class="cursor-pointer size-8 hover:scale-[1.1] duration-150 active:scale-[0.9]" src="/assets/icons/add.svg" alt="">
     </div>
 
     <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
@@ -16,7 +16,7 @@
         @for (channel of channelService.channels; track $index) {
             <li class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3"> <span class="font-bold">#</span> {{channel.name}}</li>
         }
-        <li class="flex gap-3 cursor-pointer hover:text-purple3 pl-7"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
+        <li (click)="channelNavService.addCannelPopup()" class="flex gap-3 cursor-pointer hover:text-purple3 pl-7"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
     </ul>
 
 </section>
