--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -1,4 +1,4 @@
-<section class="h-[609px] border-2 border-black flex flex-col px-5 py-10 gap-6 text-lg">
+<section class="h-[609px] border-2 border-black flex flex-col px-5 py-10 gap-6 text-lg bg-white rounded-[30px]">
 
     <div class="flex justify-between">
         <h2 class="text-2xl font-bold">Channel erstellen</h2>
