--- a/src/app/components/channel-page/channel-page.component.html
+++ b/src/app/components/channel-page/channel-page.component.html
@@ -5,7 +5,11 @@
   <app-search></app-search>
   <app-threads></app-threads>
 
-  <app-add-channel [ngClass]="{'hidden': channelNavService.addChannelPopUp()}"  class="absolute top-[20%]"></app-add-channel>
 
 </section>
 
+
+<div  [ngClass]="{'hidden': channelNavService.hideAddChannelPopUp()}" class="absolute flex top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)] justify-center lg:items-center">
+  <app-add-channel
+    class="top-[20%]"></app-add-channel>
+</div>
