--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -30,7 +30,7 @@
     </div>
   </button>
   <button class="text-purple4 font-medium text-base">
-    <div class="flex justify-center">
+    <div class="flex justify-center" [routerLink]="['/login']">
       <img src="assets/icons/logout.svg" alt="" />
       <p>Log out</p>
     </div>
