--- a/src/app/components/channel-page/threads/threads.component.html
+++ b/src/app/components/channel-page/threads/threads.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col h-full  my-6 border-2 border-purple-900 max-w-[1024px] rounded-[30px]">
+<section class="flex flex-col h-full  my-6  max-w-[1024px] rounded-[30px]">
 
 
     <app-channels></app-channels>
