--- a/src/app/components/channel-page/threads/direct-messages/direct-messages.component.html
+++ b/src/app/components/channel-page/threads/direct-messages/direct-messages.component.html
@@ -1,4 +1,4 @@
-<section class="h-[489px] border border-blue-500">
+<section class="h-[489px] ">
 
 
     <div class="flex items-center justify-between w-full h-12 px-2">
