--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -13,13 +13,13 @@
 
 
     <div class="flex flex-col gap-5">
-        <span>Channel-Name</span>
+        <span class="font-bold">Channel-Name</span>
         <input class="px-5 py-4 border border-black rounded-[40px]" type="text" placeholder="#  z.B. Kooperationsprojekte">
     </div>
 
 
     <div class="flex flex-col gap-5">
-        <span>Channel-Name</span>
+        <span class="font-bold">Channel-Name</span>
         <input class="px-5 py-4 border border-black rounded-[40px]" type="text" placeholder="Dein Text hier">
     </div>
 
