--- a/src/app/components/channel-page/add-channel/add-channel.component.html
+++ b/src/app/components/channel-page/add-channel/add-channel.component.html
@@ -130,7 +130,7 @@
         value="all"
         class="accent-purple1"
       />
-      <span>
+      <span class="w-full h-[25px]">
         Alle Mitglieder von
         <a href="" class="text-purple1 font-semibold">Office Team</a> hinzufügen
       </span>
