--- a/src/app/components/channel-page/channels/channels.component.html
+++ b/src/app/components/channel-page/channels/channels.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <ul id="dropList" class="w-full pl-[10%] flex flex-col gap-3">
-    <li class="cursor-pointer"># Entwicklerteam</li>
+    <li [routerLink]="['/chat']" class="cursor-pointer"># Entwicklerteam</li>
     <li class="cursor-pointer"># Channel hinzufügen</li>
 
     <li
