--- a/src/app/components/channel-page/navigation/navigation.component.html
+++ b/src/app/components/channel-page/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col h-full  my-6  max-w-[1024px] rounded-[30px]">
+<section class="flex flex-col h-full  my-6  max-w-[1024px] rounded-[30px] border  border-black">
 
 
     <app-channels></app-channels>
