--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -10,34 +10,8 @@
   />
 </div>
 
-<!-- Overlay-Popup unten -->
-<div
-  *ngIf="showOverlay"
-  appClickOutside
-  (appClickOutside)="closeOverlay()"
-  class="fixed bottom-0 left-0 w-full h-[206px] bg-white px-[26px] py-[30px] rounded-t-[30px] flex flex-col items-start gap-[25px] shadow-lg z-50 border-2 border-rgba(255, 255, 255, 1)"
->
-  <div class="flex justify-center w-full mb-[10px]">
-    <div
-      class="w-[62px] h-[6px] rounded-[23px]"
-      style="background: rgba(217, 217, 217, 1)"
-    ></div>
-  </div>
-  <button class="text-base font-medium text-purple4">
-    <div class="flex justify-center" [routerLink]="['/profile']">
-      <img src="assets/imgs/icons/account_circle.svg" alt="" />
-      <p class="pl-[8px]">Profil</p>
-    </div>
-  </button>
-<<<<<<< HEAD
-  <button class="text-base font-medium text-purple4">
-    <div class="flex justify-center">
-=======
-  <button class="text-purple4 font-medium text-base">
-    <div class="flex justify-center" [routerLink]="['/login']">
->>>>>>> pondy
-      <img src="assets/icons/logout.svg" alt="" />
-      <p>Log out</p>
-    </div>
-  </button>
-</div>
+<app-log-out-mobile
+*ngIf="isMobile"
+  [isVisible]="showOverlay"
+  (close)="closeOverlay()"
+></app-log-out-mobile>
