--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col h-full  my-6  max-w-[1024px] rounded-[30px] border  border-black bg-white">
+<section class="flex flex-col h-full  my-6 min-w-96  max-w-[1024px] rounded-[30px] border  border-black bg-white">
 
 
     <app-channels></app-channels>
