--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,23 +2,25 @@
 
 <section class="flex h-screen gap-3 p-3 bg-primary">
 
-
+    @if(true){
     <div class="flex">
         <app-navigation></app-navigation>
     </div>
+    }
+
 
     @if (true) {
-        <div class="h-[100vh - 80px] flex-2 border border-black">
-            <app-chat-header class="fixed"></app-chat-header>
-            <app-chat-messages></app-chat-messages>
-            <app-chat-input class="fixed"></app-chat-input>
-        </div>
+    <div class="h-[100vh - 80px] flex-2 border border-black">
+        <app-chat-header class="fixed"></app-chat-header>
+        <app-chat-messages></app-chat-messages>
+        <app-chat-input class="fixed"></app-chat-input>
+    </div>
     }
 
     @if (true) {
-        <div class=" border border-black rounded-[30px] p-3 min-w-[480px] bg-white">
-            Thread
-        </div>     
+    <div class=" border border-black rounded-[30px] p-3 min-w-[480px] bg-white">
+        Thread
+    </div>
     }
 
 
