--- a/src/app/components/legal-notice-page/legal-notice-page.component.html
+++ b/src/app/components/legal-notice-page/legal-notice-page.component.html
@@ -1,1 +1,27 @@
-<p>legal-notice-page works!</p>
+<section class="flex items-center justify-center w-full h-screen bg-primary">
+
+
+    <div class="bg-white min-w-[670px] min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
+
+        <img class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg" alt="">
+
+        <div class="flex flex-col gap-4">
+            <h1 class="text-5xl font-bold text-purple1">Impressum</h1>
+            <p>
+                [Student Name List] <br>
+                [Address of the DABubble operator - e.g. one of the students] <br>
+                [Postcode and city]
+            </p>
+        </div>
+
+
+        <div class="flex flex-col gap-4">
+            <h2 class="text-4xl font-bold text-purple1">Contact:</h2>
+            <p>Email: [Dein email]
+            </p>
+
+        </div>
+
+    </div>
+
+</section>
